# instagram-reel-processor

./: .env.example  .gitignore  HOW-TO.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_and_tasks.py
backend/src/: container.py  main.py
backend/src/application/ports/: audio_extractor.py  task_repository.py  text_analyzer.py  transcriber.py  video_downloader.py
backend/src/application/services/: pipeline_orchestrator.py
backend/src/application/use_cases/: cancel_task.py  create_task.py  get_task_status.py  get_transcript.py  list_user_tasks.py
backend/src/domain/: exceptions.py
backend/src/domain/entities/: task.py  user.py
backend/src/domain/enums/: task_status.py
backend/src/infrastructure/: config.py
backend/src/infrastructure/adapters/: ffmpeg_audio_extractor.py  keybert_analyzer.py  postgres_task_repository.py  whisper_transcriber.py  ytdlp_downloader.py
backend/src/infrastructure/auth/: jwt_handler.py
backend/src/infrastructure/celery/: app.py  callbacks.py  tasks.py
backend/src/infrastructure/database/: models.py  session.py
backend/src/presentation/api/: dependencies.py
backend/src/presentation/api/v1/: auth.py  tasks.py
backend/src/presentation/middleware/: error_handler.py
backend/src/presentation/schemas/: auth.py  task.py
backend/tests/unit/: test_analyzer.py  test_audio_extractor.py  test_auth.py  test_downloader.py  test_pipeline_orchestrator.py  test_repository.py  test_transcriber.py
docs/: ARCHITECTURE.md  (+1 more)
(+17 files in other folders)
